PLT-7646 - PLT-7656 Fix to multiple horizontal scrollbars above 4k

--- a/src/pages/certification/certification-result/fullReportTable.css
+++ b/src/pages/certification/certification-result/fullReportTable.css
@@ -1,6 +1,6 @@
 .task-details {
     padding: 20px ;
     overflow: auto;
-    max-width: calc(100vw - 400px);
+    max-width: calc(100vw - 457px);
     max-height: 500px;
 }
